Bug fix for .try:n based on CVS version of pgfkeys

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -1541,6 +1541,7 @@
           {\l_keys_current_path_tlp /._default_tlp}
       }
     }
+    \let:NN \l_keys_current_key_tlp \l_keys_current_path_tlp 
     \keys_use_cmd:c {\l_keys_current_path_tlp}
     \bool_set_true:N \l_keys_success_bool
   }{
