--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -151,7 +151,9 @@
 %
 % \begin{function}{%
 %   /.boolean:N|
-%   /.boolean:c}
+%   /.boolean:c|
+%   /.gboolean:N|
+%   /.gboolean:c}
 %   \begin{syntax}
 %     <key>/.boolean:N = <Boolean>
 %     <key>/.boolean:c = \Arg{name}
@@ -161,7 +163,8 @@
 %   value of |true| set. The behaviour with unknown values is altered
 %   by adding code to \texttt{<key>/unknown}. The |:c| variant uses a
 %   switch \cs{l_<module>_<name>_bool}, with <module> set as described
-%   in secion~\ref{sec:keys:prog}.
+%   in secion~\ref{sec:keys:prog}. The |g| variants set the flag
+%   globally.
 % \end{function}
 %
 % \begin{function}{/.cd:}
@@ -1999,6 +2002,48 @@
       \l_keys_current_path_tlp /.code:x = {
         \exp_not:N \cs_if_really_exist:cTF {bool_set_##1:N} {
           \exp_not:N \use:c {bool_set_##1:N}
+            \exp_not:d {\use:c {l_ \l_keys_tmpa_tlp #1 _bool}}
+        }{
+          \exp_not:n {
+            \keys_err_use:cw {boolean_expected}
+              \l_keys_current_key_tlp
+              {\toks_use:N \l_keys_current_value_toks}
+          }
+        }
+      },
+      \l_keys_current_path_tlp /.default:n = true
+    }
+  \keys_def:cx {\l_keys_current_path_tlp /._boolean}
+    {\exp_not:N \exp_not:N \exp_not:d
+      {\use:c {l_ \l_keys_tmpa_tlp #1_bool}}}
+  },
+%    \end{macrocode}
+% Once again global versions.
+%    \begin{macrocode}
+  \c_keys_properties_path_tlp /.gboolean:N/.code:n = {
+    \cs_if_free:NT #1 {\bool_new:N #1}
+    \keys_process:n {
+      \l_keys_current_path_tlp /.code:n = {
+        \cs_if_really_exist:cTF {bool_gset_##1:c} {
+          \use:c {bool_gset_##1:N} #1
+        }{
+          \keys_err_use:cw {boolean_expected} \l_keys_current_key_tlp
+            {\toks_use:N \l_keys_current_value_toks}
+        }
+      },
+      \l_keys_current_path_tlp /.default:n = true
+    }
+  \keys_def:cn {\l_keys_current_path_tlp /._boolean} {\exp_not:N #1}
+  },
+  \c_keys_properties_path_tlp /.gboolean:c/.code:n = {
+    \keys_module_name:
+    \cs_if_free:cT {l_ \l_keys_tmpa_tlp #1_bool} {
+      \bool_new:c {l_ \l_keys_tmpa_tlp #1_bool}
+    }
+    \keys_process:n {
+      \l_keys_current_path_tlp /.code:x = {
+        \exp_not:N \cs_if_really_exist:cTF {bool_gset_##1:N} {
+          \exp_not:N \use:c {bool_gset_##1:N}
             \exp_not:d {\use:c {l_ \l_keys_tmpa_tlp #1 _bool}}
         }{
           \exp_not:n {
